# cse276_190_final_project

go_pupper_srv/go_pupper_srv/: client_go_pupper.py  sample_controller.py  service_go_pupper.py
guideBot/: package.xml  setup.py
guideBot/guideBot/: audioPath_controller.py
guideBot/guideBot/audio_stuff/: requirements.txt  speech_process.py  test_speech_synth.py  user_audio_input.flac
guideBot/guideBot/audio_stuff/install/: local_setup.sh  setup.sh
guideBot/guideBot/audio_stuff/log/: latest_build
guideBot/guideBot/audio_stuff/tmp/: user_audio_input.flac
guideBot/guideBot/pathMove/: path_move.py
