<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>guideBot</name>
  <version>0.0.0</version>
  <description>Our final project!</description>
  <maintainer email="nnazeem@ucsd.edu">Vincent Tu</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>

  <exec_depend>python3-boto3</exec_depend>
  <exec_depend>python3-sounddevice</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-openai</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

